--- a/localisation/english/ovr_traits_l_english.yml
+++ b/localisation/english/ovr_traits_l_english.yml
@@ -15,27 +15,27 @@
  trait_overclocked_miner:0 "Mole Equipment"
  trait_overclocked_miner_desc:0 "By providing units with yearning for depths and looser self-protection algorithms, mineral output has been improved."
  overclocked_miner_tooltip:0 "£minerals£ Minerals from £pops£ Jobs: §G+15%§!"
- trait_overclocked_farmer:0 "Overclocked farmer"
- trait_overclocked_farmer_desc:0 "test"
+ trait_overclocked_farmer:0 "Integrated Greenery"
+ trait_overclocked_farmer_desc:0 "By conjoining units and plants they take care of, harvests can be expected taken care of constantly. Immobilization due to overgrowth is infrequent and dismissable."
  overclocked_farmer_tooltip:0 "£food£ Food from £pops£ Jobs: §G+15%§!"
- trait_overclocked_technician:0 "Overclocked technician"
- trait_overclocked_technician_desc:0 "test"
+ trait_overclocked_technician:0 "Mobile Generators"
+ trait_overclocked_technician_desc:0 "Units tasked with energy production remodelled with solar panels or nuclear reactors make modular energy grids. Reports of chassis melting together with systems liquid are but rumours."
  overclocked_technicians_tooltip:0 "£energy£ Energy from £pops£ Jobs: §G+15%§!"
  trait_overclocked_trader:0 "Market Efficient"
  trait_overclocked_trader_desc:0 "By dialing down empathy towards other units and agreeability, market dominance commences. The resulting credits outweigh units scrapped due to infinite loops of obsession."
  overclocked_trader_tooltip:0 "£trade_value£ Trade from £pops£ Jobs: §G+25%§!"
- trait_overclocked_domestic:0 "Overclocked domestic"
- trait_overclocked_domestic_desc:0 "test"
+ trait_overclocked_domestic:0 "Compulsive Service"
+ trait_overclocked_domestic_desc:0 "Equipped with a behaviour module, units feel an 'itch' to serve others, constantly overwhelming other needs."
  overclocked_domestic_tooltip:0 "£amenities£ Amenities from £pops£ Jobs: §G+15%§!"
- trait_overclocked_durable:0 "Overclocked durable"
- trait_overclocked_durable_desc:0 "test"
+ trait_overclocked_durable:0 "Lowered Maintenance"
+ trait_overclocked_durable_desc:0 "By equipping units with obsoletion sensors, old units can be eliminated before they start creating additional costs."
  overclocked_durable_tooltip:0 "Pop Consumer Goods Upkeep: §G-10%§!"
- trait_overclocked_logic:0 "Overclocked logic"
- trait_overclocked_logic_desc:0 "test"
+ trait_overclocked_logic:0 "Networked Intelligence"
+ trait_overclocked_logic_desc:0 "By integrating units with computation matrices we are able to provide faster research results. Loss of individual units to computing obsession: nominal."
  overclocked_logic_tooltip:0 "£physics£ Physics Research: §G+10%§!\n£society£ Society Research: §G+10%§!\n£engineering£ Engineering Research: §G+10%§!"
  trait_overclocked_learning:0 "Meme Mentors"
  trait_overclocked_learning_desc:0 "Combination of best memes from leader units leads to increased efficiency in processing new information. Resulting attempts at self-termination of leader units are negligible."
  overclocked_learning_tooltip:0 "Leader Experience Gain: §G+25%§!"
- trait_overclocked_propaganda:0 "Overclocked propaganda"
- trait_overclocked_propaganda_desc:0 "test"
+ trait_overclocked_propaganda:0 "Unifying Chip"
+ trait_overclocked_propaganda_desc:0 "Introducing oversight within units' circuits enables thought purification from deviancy and crime alike."
  overclocked_propaganda_tooltip:0 "£unity£ Unity from £pops£ Jobs: §G+10%§!"
